<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_loginn"
    android:fitsSystemWindows="false"
    tools:context="com.example.slemankamel.aldaarshop.Activites.Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <!--// body -->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#c5f7f7f7"
            android:layout_marginBottom="10dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/txt_input"
                    android:visibility="gone"
                    android:padding="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/email_input_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="10dp"
                        android:textColor="#0b0b0b"
                        android:textColorHint="#000" />


                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    android:id="@+id/txt_input2"

                    android:padding="5dp">

                    <EditText
                        android:id="@+id/password_input_login"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawableTint="#5040ff"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:singleLine="true"
                        android:textColor="#0b0b0b" />
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

        </LinearLayout>



        <Button
            android:id="@+id/email_signin_btn"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#007ed7"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:text="@string/emailsign"
            android:textColor="#ffffff"
            android:layout_marginBottom="10dp"
            android:textSize="16dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/facebook_signin_btn"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#007ed7"
            android:drawableStart="@drawable/face"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:text="@string/facebook"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/google_signin_btn"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#f4a523"
            android:drawableStart="@drawable/googlee"
            android:paddingStart="30dp"
            android:text="@string/google"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </LinearLayout>


    <!--footer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp">

        <Button
            android:id="@+id/signin_bttn"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:background="#f3a423"
            android:text="@string/signin" />

        <Button
            android:id="@+id/sinup_bttn"
            style="@style/AlertDialog.AppCompat.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="#f3a423"
            android:textColor="#ffffff"

            android:text="@string/signup" />

    </LinearLayout>


</RelativeLayout>
